# mjpeg-clock

./: CMakeLists.txt  conanfile.txt  env_setup.sh  envsetup.sh  notes.md  readme.md
copper/: CMakeLists.txt  copper_main.cc  mainwindow.cc  mainwindow.h
mjclock/: CMakeLists.txt  mjclock_main.cc
mjclock/static/: index.html
src/: mjclock_main.cc  mjpeg_video_file_gen.cc  test_video_gen.cc  test_video_gen.h
static/: index.html
